--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "gatsby": "^3.11.0",
     "gatsby-plugin-gatsby-cloud": "^2.11.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "ssr-window": "^3.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.1",
