--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 node_modules/
 .cache/
 public
-src/IncompleteTodos.jsx
-src/CompleteTodos.jsx
-src/InputTodo.jsx
+src/compoenets/IncompleteTodos.jsx
+src/compoenets/CompleteTodos.jsx
+src/compoenets/InputTodo.jsx
 src/pages/test.jsx
