--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-plugin-gatsby-cloud": "^4.19.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga4": "^1.4.1",
     "ssr-window": "^4.0.2"
   },
   "devDependencies": {
